--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.4.4"
   }
 }
