--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.4.4",
     "validator": "^13.12.0"
   }
