--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.4.4",
+    "nodemailer": "^6.9.14",
     "validator": "^13.12.0"
   }
 }
